Make shorter paypal link.

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-custom: ["https://www.paypal.com/paypalme/fnetstack"]
+custom: ["https://paypal.me/fnetstack"]
